--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "angularfire2": "^5.0.0-rc.10",
+    "angularfire2": "^5.0.0-rc.8.1-next",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.4",
     "firebase": "^5.0.4",
